# LayaNative2.0

./: .gitignore  .gitmodules  README.md  build-ios-sdk.sh
Conch/include/common/: JCIGLRender.h  JCIOSFTInterface.h
Conch/include/conchRuntime/: conchRuntime.h
Conch/include/render/: JCCmdStruct.h
Conch/source/conch/: CToJavaBridge.cpp  CToJavaBridge.h  CToObjectC.h  JCConch.cpp  JCConch.h  JCConchRender.cpp  JCConchRender.h  JCConchWASM.cpp  JCScriptRuntime.cpp  JCScriptRuntime.h  JCScrpitRuntimeWASM.cpp  JCScrpitRuntimeWASM.h  JCSystemConfig.cpp  JCSystemConfig.h  JCThreadCmdMgr.cpp  JCThreadCmdMgr.h  JNIFun.cpp  conch.idl  conchIDL.cpp  conchIDL.js  conchIDLWrapper.cpp  shaderFile.h
Conch/source/domsupport/: Base64.ts  Bluetooth.ts  CanvasCtx.ts  Console.ts  Crypto.ts  Debugger.ts  Document.ts  DomParser.ts  ES6NoDOM.d.ts  Event.ts  GamePad.ts  Global.ts  HTMLElements.ts  Input.ts  LayaConchRuntime.d.ts  LayaDOMSupport.ts  LayaGL.ts  Location.ts  Navigator.ts  Node.ts  RuntimeExt.ts  Screen.ts  Storage.ts  Timer.ts  WebSocket.ts  XMLHttpRequest.ts  apploader.ts  test.ts  tsconfig.json
Conch/source/napi/: NAPIFun.cpp  NAPIFun.h  PlatformDefine.h  WorkerMessageQueue.h  plugin_manager.cpp  plugin_manager.h
Conch/source/runtimeapp/: LayaConchRuntime.d.ts  LayaDomSupport.d.ts  autotest.ts  index.ts  test1.ts  tsconfig.json  unitTest.ts
Conch/source/webglPlus/: JCWebGLPlus.cpp  JCWebGLPlus.h  JSObjBase.h  Log.h
Redist/: app.json  config.ini  logo.swf
Redist/scripts/: apploader.js  index.js  runtimeInit.js
publish/nativetools/template/ohos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
publish/nativetools/template/ohos/entry/src/main/cpp/libentry/: index.d.ts  oh-package.json5
(+511 files in other folders)
